# openkhan

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
docs/: FRAMEWORK_PLAN.html  FRAMEWORK_PLAN.md
openkahn/: __main__.py
openkahn/control/: jobs.py  worker.py
openkahn/db/: connection.py
openkahn/interact/: chat.py  cli.py  search.py
openkahn/memory/: observations.py
openkahn/observability/: logview.py
openkahn/runtime/: app.py  config.py  daemon.py  queue.py  worker.py
openkahn/think/: brain.py  control.py  faster.py
