[project]
name = "openkahn"
version = "0.0.1"
description = "A personal, self-improving agent framework that runs fully local."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4.0",   # local LLM client (Think layer)
    "pyyaml>=6.0",     # config loading
]

[project.scripts]
kahn = "openkahn.runtime.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["openkahn"]
